--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content=
+        "width=device-width, initial-scale=1.0" />
+    <title>Welcome to my online Space</title>
+</head>
+
+<body>
+    <!-- Main content of website -->
+    <h1>Hello World !</h1>
+    <p>Soon more ... stay tuned.</p>
+</body>
+
+</html>
